--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist",
-    "README.md"
+    "dist"
   ],
   "scripts": {
     "build": "tsc --build tsconfig.json",
